samples/_failures_safe/1761535262_7e3d01_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2ba8c7c6.c: In function ‘main’:
./samples/SAFE/__tmp_2ba8c7c6.c:178:9: error: expected declaration or statement at end of input
  178 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_2ba8c7c6.c:178:9: error: expected declaration or statement at end of input
